# lox-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: main.cpp
